--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 COMPOSE_PROJECT_NAME=your_project_name
-PORT=your_port_number
+ENVIRONMENT=local
 NEO4J_URI=your_neo4j_uri
 NEO4J_USERNAME=your_neo4j_username
 NEO4J_PASSWORD=your_neo4j_password
