GCEで動く状態に調整

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ AURA_INSTANCENAME=your_aura_instancename
 PROJECT_ID=your_project_id
 REGION=your_region
 STAGING_BUCKET=your_staging_bucket
+GOOGLE_APPLICATION_CREDENTIALS=your_google_application_credentials_path
