認証回り粘ったが収穫なし

--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,5 @@ cython_debug/
 others/
 application_default_credentials.json
 praxis-tensor-434514-e6-7f874109efde.json
+memo.txt
+client_secret_444864034519-d7853j364v3gee8uc8h02k49tf794ob6.apps.googleusercontent.com.json
