--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ AURA_INSTANCENAME=your_aura_instancename
 PROJECT_ID=your_project_id
 REGION=your_region
 STAGING_BUCKET=your_staging_bucket
+REDIRECT_URI=your_redirect_uri
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
